Add quickfix for missing export builder
Add a marker resolution for adding a missing export builder.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
@@ -502,6 +502,13 @@
             </description>
       </decorator>
    </extension>
+    <extension
+          point="org.eclipse.ui.ide.markerResolution">
+       <markerResolutionGenerator
+             class="org.eclipse.fordiac.ide.systemmanagement.ui.marker.resolution.FordiacNatureMarkerResolutionGenerator"
+             markerType="org.eclipse.fordiac.ide.model.projectConfiguration">
+       </markerResolutionGenerator>
+    </extension>
 
    
 </plugin>
