--- a/plugins/org.eclipse.fordiac.ide.gef/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.gef/plugin.properties
@@ -1,19 +1,20 @@
- ###############################################################################
- # Copyright (c) 2008, 2009, 2011, 2014 - 2016 Profactor GbmH, fortiss GmbH
- #				 2020 Andrea Zoitl
- # 
- # This program and the accompanying materials are made available under the
- # terms of the Eclipse Public License 2.0 which is available at
- # http://www.eclipse.org/legal/epl-2.0.
- #
- # SPDX-License-Identifier: EPL-2.0
- #
- # Contributors:
- #   Gerhard Ebenhofer, Alois Zoitl
- #     - initial API and implementation and/or initial documentation
- #   Andrea Zoitl
- #	   - externalized translatable strings
- ###############################################################################
+###############################################################################
+# Copyright (c) 2008, 2024 Profactor GbmH, fortiss GmbH, Andrea Zoitl,
+#						   Primetals Technologies Austria GmbH
+# 
+# This program and the accompanying materials are made available under the
+# terms of the Eclipse Public License 2.0 which is available at
+# http://www.eclipse.org/legal/epl-2.0.
+#
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#   Gerhard Ebenhofer, Alois Zoitl
+#     - initial API and implementation and/or initial documentation
+#   Andrea Zoitl
+#	   - externalized translatable strings
+###############################################################################
+
 AbstractAttributeSection_CreateAttribute=create attribute
 AbstractAttributeSection_DeleteSelectedAttribute=delete selected attribute
 AdjustConnectionCommand_WrongConnectionSegmentIndex=Wrong connection segment index ({0}) provided to AdjustConnectionCommand!
@@ -97,4 +98,8 @@ InterfaceElementSection_ConnectionGroup=Connections
 InterfaceElementSection_InConnections=In-Connections
 InterfaceElementSection_OutConnections=Out-Connections
 InterfaceElementSection_MessageDialog_TITLE=Change Destination or Source of Connection
+
+
+context.graphicalEditing.description=4diac IDE Graphical Editing Context
+context.graphicalEditing.name=Graphical Editing
 
