Introduced own Binding context for FBNetwork editing
Furthermore the texts for the main affected commands where externalized.

--- a/plugins/org.eclipse.fordiac.ide.application/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.application/plugin.properties
@@ -1,19 +1,19 @@
- ###############################################################################
- # Copyright (c) 2008 - 2017 Profactor GmbH, TU Wien ACIN, fortiss GmbH
- #				 2019 - 2020 Andrea Zoitl
- # 
- # This program and the accompanying materials are made available under the
- # terms of the Eclipse Public License 2.0 which is available at
- # http://www.eclipse.org/legal/epl-2.0.
- #
- # SPDX-License-Identifier: EPL-2.0
- #
- # Contributors:
- #   Gerhard Ebenhofer, Alois Zoitl, Monika Wenger
- #     - initial API and implementation and/or initial documentation
- #   Andrea Zoitl
- #     - Externalized all translatable strings 
- ###############################################################################
+###############################################################################
+# Copyright (c) 2008, 2024 Profactor GmbH, TU Wien ACIN, fortiss GmbH, 
+#                          Andrea Zoitl, Primetals Technologies Austria GmbH
+# 
+# This program and the accompanying materials are made available under the
+# terms of the Eclipse Public License 2.0 which is available at
+# http://www.eclipse.org/legal/epl-2.0.
+#
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#   Gerhard Ebenhofer, Alois Zoitl, Monika Wenger
+#     - initial API and implementation and/or initial documentation
+#   Andrea Zoitl
+#     - Externalized all translatable strings 
+###############################################################################
 AbstractCommandMarkerResolution_CannotCreateCommand=Cannot create command for element ''{0}'' in ''{1}''
 AbstractCommandMarkerResolution_CannotExecuteCommand=Cannot execute command for element ''{0}'' in ''{1}''
 AbstractCommandMarkerResolution_CommitTask=Saving files
@@ -112,8 +112,6 @@ ToggleConnections_Hide=Hide All Connections
 ToggleConnections_Singular_Hide=Hide Connection
 ToggleConnections_Singular_Show=Show Connection
 ToggleConnections_Target_Show=Show Outside Connections
-Element=Element
-Location=Location
 VarConfigurationSection_VarConfigs=VAR Configs
 InfoPropertySection_SystemInfo=System Information
 InfoPropertySection_Number_Of_Connections_Label=Number of Connections:
@@ -136,3 +134,12 @@ QuickFixDialog_Resolutions_List_Title=Select a fix:
 QuickFixDialog_Problems_List_Title=Problems:
 QuickFixDialog_Problems_List_Location=Location
 QuickFixDialog_Problems_List_Resource=Resource
+
+command.followLeftConnection.name=Follow Left Connection
+command.followRightConnection.name=Follow Right Connection
+command.goToChild.name=Go To Child
+command.goToParent.name=Go To Parent
+command.goToPinAbove.name=Go To Pin Above
+command.goToPinBelow.name=Go To Pin Below
+context.fbnetworkEditing.description = 4diac IDE FB Network Editing Context 
+context.fbnetworkEditing.name = FB Network Editing	
