Change linked library location in project
deleted SystemPaletteManagement
replaced several explicit strings with TypeLibraryTags references
adjusted test cases

--- a/plugins/org.eclipse.fordiac.ide.library.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.library.ui/plugin.xml
@@ -79,8 +79,19 @@
       				<or>
       					<and>
                         	<instanceof value="org.eclipse.core.resources.IFolder"/>
-                          	<test property="org.eclipse.core.resources.name"
-                             	value="Type Library"/>
+                           <or>
+                              <test
+                                    property="org.eclipse.core.resources.name"
+                                    value="Type Library">
+                              </test>
+                              <test
+                                    property="org.eclipse.core.resources.name"
+                                    value="Standard Libraries">
+                              </test>
+                              <test
+                                    property="org.eclipse.core.resources.name"
+                                    value="External Libraries">
+                              </test></or>
                         </and>
         				<instanceof value="org.eclipse.core.resources.IProject"/>
         			</or>
