Add toggle bool value command
Add command for negating BOOL values and watches in both FB network
editors and the variables view.

--- a/plugins/org.eclipse.fordiac.ide.application/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.application/plugin.properties
@@ -141,5 +141,7 @@ command.goToChild.name=Go To Child
 command.goToParent.name=Go To Parent
 command.goToPinAbove.name=Go To Pin Above
 command.goToPinBelow.name=Go To Pin Below
+command.toggleBoolValue.description=Negate the value of a BOOL variable
+command.toggleBoolValue.name=Toggle Value
 context.fbnetworkEditing.description = 4diac IDE FB Network Editing Context 
 context.fbnetworkEditing.name = FB Network Editing	
