[Clean up] Cleaned quick fix command
Externalized quick fix name and description strings. Removed double
command definition and unnecessary label to use the one from the command
definition.

--- a/plugins/org.eclipse.fordiac.ide.application/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.application/plugin.properties
@@ -143,5 +143,8 @@ command.goToPinAbove.name=Go To Pin Above
 command.goToPinBelow.name=Go To Pin Below
 command.toggleBoolValue.description=Negate the value of a BOOL variable
 command.toggleBoolValue.name=Toggle Value
+command.quickFix.name = Quick Fix 
+command.quickFix.description = Applies a Quick Fix to the selected element 
+
 context.fbnetworkEditing.description = 4diac IDE FB Network Editing Context 
 context.fbnetworkEditing.name = FB Network Editing	
