Added new Icon for library directories

--- a/plugins/org.eclipse.fordiac.ide.images/fordiacimages.properties
+++ b/plugins/org.eclipse.fordiac.ide.images/fordiacimages.properties
@@ -63,6 +63,7 @@ ICON_KILL_DEVICE=device_kill.png
 ICON_RUNTIME_LAUNCHER=launcher.gif
 ICON_LEFT_INPUT_PRIMITIVE=service_left_input_primitive.png
 ICON_LEFT_OUTPUT_PRIMITIVE=service_left_output_primitive.png
+ICON_LINKED_LIBRARY=linkedlib.png
 ICON_LINK_OUTPUT=link_output.png
 ICON_LINK_INPUT=link_input.png
 ICON_LOCKED_STATE=lockedstate_small.gif
