Added all 4diac IDE type files as XML content
This required dedicated content types and content bindings so that the
right editor is opening.

--- a/plugins/org.eclipse.fordiac.ide.attributetypeeditor/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.attributetypeeditor/plugin.properties
@@ -12,7 +12,13 @@
  #     - initial API and implementation and/or initial documentation
  ################################################################################
 
+AttributeTypeEditor.bundleName=Attribute Type Editor
+
+AttributeTypeEditor=Attribute Type Editor
+
 AttributeTypeEditorPage_Title=Attribute declaration
 
 AttributeTypeEditorPage_ComboBox_StructEditingComposite=Struct type
 AttributeTypeEditorPage_ComboBox_DirectlyDerivedTypeComposite=Directly derived type
+
+IEC61499AttributeTypeFile = IEC 61499 Attribute Type File
