--- a/plugins/org.eclipse.fordiac.ide.datatypeeditor/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.datatypeeditor/plugin.properties
@@ -11,4 +11,11 @@
  #   Daniel Lindhuber
  #     - initial API and implementation and/or initial documentation
  ################################################################################
+
+DataTypeEditor.bundleName=Data Type Editor
+
+DataTypeEditor=Data Type Editor
+
 DataTypeEditorPage_DataType=Data type
+
+IEC61499DataTypeFile=IEC 61499 Data Type File
