--- a/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.properties
@@ -1,16 +1,15 @@
- ###############################################################################
- # Copyright (c) 2019 - 2020 Andrea Zoitl
- # 
- # This program and the accompanying materials are made available under the
- # terms of the Eclipse Public License 2.0 which is available at
- # http://www.eclipse.org/legal/epl-2.0.
- #
- # SPDX-License-Identifier: EPL-2.0
- #
- # Contributors:
- #   Andrea Zoitl
- #     - Externalized all translatable strings 
- ###############################################################################
+###############################################################################
+# Copyright (c) 2019, 2024 Andrea Zoitl
+# 
+# This program and the accompanying materials are made available under the
+# terms of the Eclipse Public License 2.0 which is available at
+# http://www.eclipse.org/legal/epl-2.0.
+#
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#   Andrea Zoitl - Externalized all translatable strings 
+###############################################################################
 CreateFromNewAdapterAction_NewAdapter=New Adapter ...
 
 CreateInputEventAction_CreateInputEvent=Create Input Event
@@ -21,12 +20,16 @@ FBInterfacePaletteFactory_AdapterTypes=Adapter types
 FBInterfacePaletteFactory_EventTypes=Event types
 FBInterfacePaletteFactory_DataTypes=Data types
 FBInterfacePaletteFactory_RootGroup=Root Group
+FBTypeEditor = FB Type Editor
 FBTypeXtextEditor_PerformanceModeDialogMessage=Enabled performance mode since the current source exceeds the configured line limit. No code minings, folding, semantic hightlighting, or outline available.
 FBTypeXtextEditor_PerformanceModeDialogTitle=Performance Mode
 FBTypeXtextEditor_PerformanceModeOutlineMessage=No Outline available in performance mode
+
+FunctionBlockTypeEditor.bundleName = Function Block Type Editor
+
+IEC61499FBTypeFile = IEC 61499 FB Type File
 
 InterfaceContextMenuProvider_CreateDataInput=Create Data Input
 InterfaceContextMenuProvider_CreateDataOutput=Create Data Output
 InterfaceContextMenuProvider_CreatePlug=Create Plug
 InterfaceContextMenuProvider_CreateSocket=Create Socket
-
