--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
@@ -56,6 +56,7 @@ SystemExplorer_Refresh=Refresh
 SystemExplorerNewActionProvider_New=&New
 
 SystemEditor.name=IEC 61499 System Editor
+IEC61499SystemFile=IEC 61499 System File
 
 
 SystemEditor_Applications=Applications:
