--- a/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.properties
@@ -1,5 +1,5 @@
  ###############################################################################
- # Copyright (c) 2017, 2023 fortiss GmbH, Andrea Zoitl
+ # Copyright (c) 2017, 2024 fortiss GmbH, Andrea Zoitl
  #                          Martin Erich Jobst
  # 
  # This program and the accompanying materials are made available under the
@@ -35,6 +35,12 @@ BuildPathPropertyPage_EnterNewValue=Enter new value
 BuildPathPropertyPage_Remove=Remove
 BuildPathPropertyPage_SaveError=Error Saving Build Path Configuration
 BuildPathPropertyPage_Toggle=Toggle
+
+command.ConnectionsToStruct = Connections To Struct
+command.OpenType = Open Type
+command.RenameElement = Connections To Struct
+command.RepairBrokenConnection = Repair broken connection
+
 CommandRedoChange_CannotRedoCommand=Cannot redo command
 CommandUndoChange_CannotUndoCommand=Cannot undo command
 ConnectionsToStructRefactoring_ChangeName=Convert Connections To Struct
@@ -79,10 +85,17 @@ DeleteFBTypeParticipant_Change_UpdateInstance=Update Instance: {0}
 DeleteFBTypeParticipant_Change_UpdateInternalFB=Update Internal FB: {0}
 DeleteFBTypeParticipant_Change_UpdateManipulator=Update Multiplexer: {0}
 DeleteFBTypeParticipant_Change_UpdateSubappPins=Update pins in untyped subapp: {0}
+DeviceTypeEditor=Device Type Editor
+
 FBTypeComposedAdapterFactory_FBTypecomposedAdapterFactoryShouldNotBeInsantiated=Utility class FBTypecomposedAdapterFactory should not be insantiated!
+FBTypeManagement.bundleName = FB Type Management
+
+IEC61499File=IEC 61499 File
 IFordiacPreviewChange_Reconnect0=Reconnect
 ImportChange_ImportedNamespaceChanged=Imported namespace changed
 InitialValueChange_InitialValueChanged=The initial value has changed
+
+NewFBTypeWizardName = Type...
 NewFBTypeWizard_TemplateNotAvailable=Template not available! ("{0}")
 NewFBTypeWizardPage_TypeAlreadyExists=The type ''{0}'' already exists!
 NewFBTypeWizardPage_FileAlreadyExists=The file ''{0}'' already exists!
@@ -104,16 +117,25 @@ RenameElementRefactoringProcessor_RenamePinInType=Rename Pin in type: {0}
 RenameElementRefactoringWizardPage_Name=Name
 RenameType_Name=Rename IEC 61499 Type
 RenameType_TypeExists=The type {0} is already included in the library
+ResourceTypeEditor = Resource Type Editor
+
 OpenTypeHandler_EDITOR_OPEN_ERROR_MESSAGE=Could not open according editor
 OpenTypeHandler_NO_FILES_IN_WORKSPACE=There are no files in your workspace
 OpenTypeHandler_NO_FILES_SELECTED=No file selected
 OpenTypeHandler_OPEN_TYPE_ERROR_TITLE=Open Type Error
 OpenTypeHandler_OPEN_TYPE_TITLE=Open Type
+
+SegmentTypeEditor=Segment Type Editor
+
 typeLibraryHasAlreadyBeenExtracted=This type library has already been extracted into the selected project!
+
+TypeManagement.perspectiveName=Type Management
 typeManagementPreferencePageTitle=Type Management Preferences Page
 typeManagementPreferencePageIdentificationTitle=Identification information
 typeManagementPreferencePageVersionTitle=Version information
 typeManagementPreferencePageDescription=Default values for created Function Blocks
+TypeNavigator=Type Navigator
+
 Warning=Warning
 Refactoring_RenameFromTo=Rename Type from {0} to : {1}
 Refactoring_AffectedStruct=Affected Struct {0} that contain struct {1} as member
