--- a/plugins/org.eclipse.fordiac.ide.attributetypeeditor/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.attributetypeeditor/plugin.xml
@@ -2,9 +2,17 @@
 <?eclipse version="3.4"?>
 <plugin>  
    <extension
+      point="org.eclipse.core.contenttype.contentTypes">
+   		<content-type
+         	base-type="org.eclipse.4diac.ide.iec61499Content"
+         	file-extensions="atp,ATP"
+         	id="org.eclipse.4diac.ide.attributeTypeContent"
+         	name="%IEC61499AttributeTypeFile" />
+   </extension>
+   <extension
          point="org.eclipse.ui.editors">
       <editor
-            name="Attribute Type Editor"
+            name="%AttributeTypeEditor"
             extensions="atp"
             default="true"
             class="org.eclipse.fordiac.ide.attributetypeeditor.editors.AttributeTypeEditor"
@@ -12,6 +20,9 @@
             icon="fordiacimage://ICON_ATTRIBUTE_DECLARATION"
             matchingStrategy="org.eclipse.fordiac.ide.ui.editors.FordiacEditorMatchingStrategy">
       </editor>
+      <editorContentTypeBinding
+            contentTypeId="org.eclipse.4diac.ide.attributeTypeContent" 
+            editorId="org.eclipse.fordiac.ide.model.attributetype.atp"/>
    </extension>
    <extension
          point="org.eclipse.fordiac.ide.typeeditor.typeEditorPage">
