--- a/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.xml
@@ -2,7 +2,14 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="fBTEditorValidation" name="Function Block Type Editor Validation" schema="schema/fBTEditorValidation.exsd"/>
-   
+   <extension
+      point="org.eclipse.core.contenttype.contentTypes">
+   		<content-type
+         	base-type="org.eclipse.4diac.ide.iec61499Content"
+         	file-extensions="adp,ADP,fbt,FBT,fct,FCT"
+         	id="org.eclipse.4diac.ide.fbTypeContent"
+         	name="%IEC61499FBTypeFile" />
+   </extension>
    <extension
          point="org.eclipse.ui.editors">
       <editor
@@ -11,9 +18,13 @@
             extensions="fbt, fct, adp"
             icon="fordiacimage://ICON_FB_TYPE"
             id="org.eclipse.fordiac.ide.fbtypeeditor.editors.FBTypeEditor"
-            name="FB Type Editor"
+            name="FBTypeEditor"
+            default="true"
             matchingStrategy="org.eclipse.fordiac.ide.ui.editors.FordiacEditorMatchingStrategy">
       </editor>
+      <editorContentTypeBinding
+            contentTypeId="org.eclipse.4diac.ide.fbTypeContent" 
+            editorId="org.eclipse.fordiac.ide.fbtypeeditor.editors.FBTypeEditor"/>
    </extension>
    <extension
          point="org.eclipse.fordiac.ide.typeeditor.typeEditorPage">
