Add stylesheet for watch colors on dark theme

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/plugin.xml
@@ -994,6 +994,15 @@
 		</colorDefinition>
 	</extension>
 	<extension
+		point="org.eclipse.e4.ui.css.swt.theme">
+		<stylesheet
+			uri="css/e4-dark_fordiac_watches.css">
+			<themeid
+				refid="org.eclipse.e4.ui.css.theme.e4_dark">
+			</themeid>
+		</stylesheet>
+	</extension>
+	<extension
 		point="org.eclipse.ui.editors.annotationTypes">
 		<type
 			markerType="org.eclipse.fordiac.ide.deployment.debug.watchpointMarker"
