Reworked Open Type Dialog to be Less Blocking
The open type dialog always did load all type entries prior to opening
and searching. This was rather slow. By using a
FilteredItemsSelectionDialog the required type libraries are searched on
demand.

--- a/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.properties
@@ -120,10 +120,10 @@ RenameType_TypeExists=The type {0} is already included in the library
 ResourceTypeEditor = Resource Type Editor
 
 OpenTypeHandler_EDITOR_OPEN_ERROR_MESSAGE=Could not open according editor
-OpenTypeHandler_NO_FILES_IN_WORKSPACE=There are no files in your workspace
-OpenTypeHandler_NO_FILES_SELECTED=No file selected
 OpenTypeHandler_OPEN_TYPE_ERROR_TITLE=Open Type Error
-OpenTypeHandler_OPEN_TYPE_TITLE=Open Type
+OpenTypeHandler_OPEN_TYPE_TITLE = Open Type
+OpenTypeHandler_DialogMessage = Enter type name prefix or pattern (*, ?):
+OpenTypeHandler_SearchInAllProjects = Search in all projects
 
 SegmentTypeEditor=Segment Type Editor
 
